// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Match snapshot 1`] = `
<h1>
  <button
    className="lead "
    onClick={[MockFunction]}
  >
    text
  </button>
</h1>
`;

exports[`Match snapshot with light colour on hover 1`] = `
<h1>
  <button
    className="lead lightHover"
    onClick={[MockFunction]}
  >
    text
  </button>
</h1>
`;
